samples/_failures_safe/1761621379_55c229_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9856a79e.c: In function ‘main’:
./samples/SAFE/__tmp_9856a79e.c:152:13: error: expected declaration or statement at end of input
  152 |             printf("Multiplication result:\n");
      |             ^~~~~~
./samples/SAFE/__tmp_9856a79e.c:152:13: error: expected declaration or statement at end of input
